Fixed some spacing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,6 +39,7 @@
 
 #filterTab{
     padding-left: 5rem;
+    margin-left: 10rem;
     padding-right: 3rem;
     width: 10rem;
     padding-top: 1rem;
@@ -46,7 +47,7 @@
 }
 
 #shopTab{
-    width: calc(100% - 15rem);
+    width: calc(100% - 25rem);
 }
 
 h1{
@@ -160,7 +161,8 @@ h4{
 /*SOCIAL PAGE STYLING*/
 
 #socialIpsum{
-
+    padding-left: 13%;
+    padding-right: 13%;
 }
 
 
